# python-container-builder

./: .dockerignore  Dockerfile  README.md  TROUBLESHOOTING.md
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  build.yml  check-versions.yml  nightly.yml
examples/: README.md
examples/data-science/: Dockerfile  README.md  analyze.py  sample_data.csv
examples/fastapi/: Dockerfile  README.md  main.py
examples/poetry-cli/: Dockerfile  README.md  cli.py  pyproject.toml
