[tool.poetry]
name = "poetry-cli-example"
version = "1.0.0"
description = "Example CLI tool demonstrating Poetry with python-container-builder"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "cli:cli"
